# icantkube

./: .gitattributes  .gitignore  README.md  imageConfig.yaml
.github/image_updater_scripts/: find_dockerfiles.py  update_images.py
.github/workflows/: build-dockerfiles.yml  build_dockerfiles.yml  service-healthcheck.yml  update-image-tags.yml
infra/: create_cluster.sh  deploy-cloud.sh  deploy-local.sh  redeploy.sh
infra/patches/: add-disk.yaml  bind-addresses.yaml  extra-mounts.yaml  kublet-cert-rotation.yaml  predictable-interface-names.yaml
infra/terraform/: README.md  main.tf  output.tf  variables.tf
kubernetes/: README.md  redeploy.sh
kubernetes/apps/: README.md
kubernetes/argocd-boostrap/: README.md  track-create-apps-&-data-sources.yaml  track-create-apps-and-data-sources-local.yaml  track-create-apps-and-data-sources.yaml  track-create-apps.yaml
kubernetes/create-apps/: README.md  api-gateway-app.yaml  argo-rollouts-app.yaml  argocd-app.yaml  backend-app.yaml  busybox-debug-app.yaml  cadvisor-app.yaml  cloudflare-tunnel-ingress-controller-app.yaml  minio-app.yaml  (+24 more)
src/: README.md
src/model-train/: .gitignore  Dockerfile  README.md  app.py  celery-app.Dockerfile  model-train.Dockerfile  pyproject.toml
src/model-train/app/: __init__.py  config.py  connections.py  constants.py  main.py  mode-training-pipeline.py  model-training-pipeline.py  model_training_pipeline.py  tasks.py
src/sensor-data/: README.md  docker-compose.yml  pyproject.toml  sensor-data.Dockerfile
src/sensor-data/app/: main.py
tf/: README.md  main.tf  output.tf  variables.tf
(+394 files in other folders)
