[project]
name = "model-train"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.43",
    "botocore>=1.42.43",
    "celery>=5.6.1",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pymysql>=1.1.0",
    "minio>=7.2.20",
    "mlflow>=3.8.1",
    "pandas>=2.3.3",
    "redis>=7.1.0",
    "scikit-learn>=1.8.0",
]
